--- a/JavaFX/Todo/todo/src/main/resources/com/example/todo/mainwindow.fxml
+++ b/JavaFX/Todo/todo/src/main/resources/com/example/todo/mainwindow.fxml
@@ -8,7 +8,22 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.text.Font?>
-<BorderPane fx:controller="com.example.todo.HelloController" xmlns:fx="http://javafx.com/fxml">
+<?import javafx.scene.control.MenuBar?>
+<?import javafx.scene.control.Menu?>
+<?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.SeparatorMenuItem?>
+<BorderPane fx:id="mainBorderPane" fx:controller="com.example.todo.HelloController" xmlns:fx="http://javafx.com/fxml">
+    <top>
+        <MenuBar>
+            <Menu text="File">
+                <items>
+                    <MenuItem text="New..." onAction="#showNewItemDialog"/>
+                    <SeparatorMenuItem/>
+                    <MenuItem text="Exit"/>
+                </items>
+            </Menu>
+        </MenuBar>
+    </top>
     <left>
         <ListView fx:id="todoListView" onMouseClicked="#handleClickListView">
 
@@ -18,12 +33,12 @@
         <VBox>
             <TextArea fx:id="itemDetails" VBox.vgrow="ALWAYS"/>
             <HBox>
-                <Label text="Due: ">
+                <Label text="Due: " style="-fx-background-color:white">
                     <font>
                         <Font name="Times New Romen bold" size="20"/>
                     </font>
                 </Label>
-                <Label fx:id="deadlineLabel">
+                <Label fx:id="deadlineLabel" style="-fx-background-color:green">
                     <font>
                         <Font name="Times New Roman bold" size="20"/>
                     </font>
