--- a/JavaFX/Todo/todo/src/main/resources/com/example/todo/todoItemDialog.fxml
+++ b/JavaFX/Todo/todo/src/main/resources/com/example/todo/todoItemDialog.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.TextArea?>
 <DialogPane fx:controller="com.example.todo.DialogController" xmlns:fx="http://javafx.com/fxml">
     <headerText>
         We could put instructions here
@@ -11,11 +12,11 @@
     <content>
         <GridPane vgap="10" hgap="10">
             <Label text="Short Description" GridPane.rowIndex="0" GridPane.columnIndex="0"/>
-            <TextField GridPane.rowIndex="0" GridPane.columnIndex="1" />
-            <Label text="Details: " GridPane.rowIndex="1" GridPane.columnIndex="0"/>
-            <TextField GridPane.rowIndex="1" GridPane.columnIndex="1"/>
+            <TextField fx:id="shortDescription" GridPane.rowIndex="0" GridPane.columnIndex="1" />
+            <Label text="Details: " GridPane.rowIndex="1" GridPane.columnIndex="0" />
+            <TextArea fx:id="detailsArea" GridPane.rowIndex="1" GridPane.columnIndex="1" minHeight="50" wrapText="true"/>
             <Label text="Deadline: " GridPane.rowIndex="2" GridPane.columnIndex="0"/>
-            <DatePicker GridPane.rowIndex="2" GridPane.columnIndex="1"/>
+            <DatePicker fx:id="deadlinePicker" GridPane.rowIndex="2" GridPane.columnIndex="1"/>
         </GridPane>
     </content>
 </DialogPane>
