--- a/JavaFX/Contact/demo/src/main/resources/com/example/demo/hello-view.fxml
+++ b/JavaFX/Contact/demo/src/main/resources/com/example/demo/hello-view.fxml
@@ -1,30 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.*?>
 <?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ListView?>
-<BorderPane xmlns:fx="http://javafx.com/fxml"
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.control.cell.PropertyValueFactory?>
+<BorderPane fx:id="mainPane" xmlns:fx="http://javafx.com/fxml"
             fx:controller="com.example.demo.Controller">
     <top>
         <HBox>
             <MenuBar>
                 <Menu text="Menu">
                     <items>
-                        <MenuItem text="New"/>
+                        <MenuItem text="New" onAction="#showDialog"/>
+                    </items>
+                    <items>
+                        <MenuItem text="Edit" onAction="#editDialog"/>
                     </items>
                 </Menu>
             </MenuBar>
         </HBox>
     </top>
     <center>
-        <ListView fx:id="contactList">
-
-        </ListView>
+        <TableView fx:id="contactList">
+            <columns>
+                <TableColumn text="First Name">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="firstName"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="Last Name">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="lastName"/>
+                    </cellValueFactory>
+                </TableColumn>
+                <TableColumn text="Email">
+                    <cellValueFactory>
+                        <PropertyValueFactory property="email"/>
+                    </cellValueFactory>
+                </TableColumn>
+            </columns>
+        </TableView>
     </center>
 
 
